# experiments

./: README.md
.github/workflows/: ci.yml
ci-logs-to-otel/: Cargo.toml  README.md
ci-logs-to-otel/src/: main.rs
derive/: Cargo.toml
derive/src/: main.rs
