[package]
name = "ci-logs-to-otel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.57", features = ["backtrace"] }
bytes = "1.1.0"
home = "0.5.3"
octocrab = "0.16.0"
tokio = { version = "1.18.2", features = ["rt-multi-thread", "macros"] }
zip = "0.6.2"
